--- a/ssd_mobilenet_v1_pets.config
+++ b/ssd_mobilenet_v1_pets.config
@@ -155,7 +155,7 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "C:/Work/05_Learning/01_Stage2_Record/DetectionData/TrainValidationDataTF/model.ckpt"
+  fine_tune_checkpoint: "/data/colorfulxd/vehicle200/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
